--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -67,6 +67,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
+    'Encode Sans',
     Inter,
     -apple-system,
     BlinkMacSystemFont,
@@ -83,4 +84,22 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+input,
+button {
+  font-family:
+    'Encode Sans',
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
 }
